Started Object Based Logging with configuration Need to document it.  But it seems to work.

--- a/config.json.sample
+++ b/config.json.sample
@@ -3,7 +3,7 @@
     "debug wgb uplink event",
     "debug wgb uplink scan info"
   ],
-  "filter_list": [
+  "alert_strings": [
     "[DOT11_UPLINK_CONNECTED]",
     "Aux roam switch radio role",
     "[DOT11_UPLINK_FT_AUTHENTICATING]",
@@ -11,7 +11,9 @@
     "DOT11-UPLINK_ESTABLISHED",
     "Peer assoc event received from driver"
   ],
-  "dot11_uplink_ev_regex": "DOT11_UPLINK_EV: parent_rssi: (-\\d+), configured low rssi: (-\\d+) serving (\\d+) scanning (\\d+)",
+  "regex_patterns": {
+    "dot11_uplink_ev_regex": "DOT11_UPLINK_EV: parent_rssi: (-\\d+), configured low rssi: (-\\d+) serving (\\d+) scanning (\\d+)"
+  },
   "outputdir": "./output",
   "log_netmiko": false,
   "debug_netmiko": false
